# ros_cube_msgs

./: README.md  build-depends.repos
.github/workflows/: colcon-test.yml
.woodpecker/: colcon-test.yaml
cube_ca_msgs/: CMakeLists.txt  package.xml
cube_ca_msgs/msg/: EgoView.msg
cube_ca_msgs/srv/: Encoder.srv
cube_cp_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
cube_cp_msgs/srv/: Encoder.srv
cube_den_msgs/: CMakeLists.txt  package.xml
cube_den_msgs/srv/: Encoder.srv  Lookup.srv  Transmission.srv
cube_facility_msgs/: CMakeLists.txt  package.xml
cube_facility_msgs/msg/: InformationQuality.msg  LanePosition.msg  RoadType.msg  StationaryVehicleWarningType.msg
cube_facility_msgs/srv/: StationaryVehicleRequest.srv
cube_kinematics_msgs/: CMakeLists.txt  package.xml
cube_kinematics_msgs/msg/: BodyMotion.msg  ErrorEllipse.msg  GroundMotion.msg  Position.msg
cube_msgs/: CMakeLists.txt  package.xml
cube_msgs/msg/: AccelerationControlStatus.msg  Curvature.msg  DriveDirection.msg  ExteriorLights.msg  PathHistory.msg  PathPoint.msg  Pseudonym.msg
cube_msgs/srv/: ChangePseudonym.srv  GetItsTimestamp.srv
cube_ttc_msgs/: CMakeLists.txt  README.md  package.xml
cube_ttc_msgs/action/: CollisionRiskMonitor.action
cube_ttc_msgs/msg/: CollisionRisk.msg  Object.msg  PathPoint.msg
cube_va_msgs/: CMakeLists.txt  LICENSE  README.md  package.xml
cube_va_msgs/srv/: Encoder.srv
